# manage-breast-screening

./: .browserslistrc  .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  babel.config.json  compose.yaml  jest-setup.js  jest.config.js  jest.setup.js  manage.py  package-lock.json  package.json  pyproject.toml  rollup.config.js  rollup.config.mjs  tsconfig.base.json  tsconfig.dev.json  tsconfig.json
.github/workflows/: cicd-1-pull-request.yaml  cicd-2-main-branch.yaml  cicd-3-deploy.yaml  generate-diagrams.yaml  stage-1-commit.yaml  stage-2-test.yaml  stage-3-build.yaml  stage-4-acceptance.yaml  stage-4-deploy.yaml  stage-5-deploy.yaml  test2.yml  test4.yml  test5-target.yml  test5.yml
docs/adr/: ADR-001-Use_Django_framework.md  ADR-XXX-Use_Django_framework.md
docs/diagrams/: workspace.dsl
infrastructure/: .gitignore
infrastructure/terraform/: .terraform.lock.hcl  main.tf  networking.tf  output.tf  providers.tf  variables.tf
manage_breast_screening/: db.sqlite3  tsconfig.json
manage_breast_screening/clinics/: admin.py  apps.py  models.py  presenters.py  urls.py  views.py
manage_breast_screening/config/: .env.tpl  asgi.py  jinja2_env.py  settings.py  settings_test.py  system_test_setup.py  urls.py  wsgi.py
manage_breast_screening/participants/: admin.py  models.py
manage_breast_screening/record_a_mammogram/: apps.py  forms.py  presenters.py  urls.py  views.py
manage_breast_screening/static/: nhsuk-9.3.0.min.css  nhsuk-9.3.0.min.js  (+2 more)
scripts/: copy_nhsuk_frontend.sh  help.mk  shared.mk
(+85 files in other folders)
